--- a/package.json
+++ b/package.json
@@ -34,12 +34,13 @@
     "@prisma/cli": "~2.14",
     "@prisma/client": "~2.14",
     "blitz": "0.29.7",
+    "formik": "2.2.6",
+    "minerva-ui": "7.1.3",
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.0",
     "typescript": "4.1.3",
-    "zod": "1.11.11",
-    "formik": "2.2.6"
+    "zod": "1.11.11"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "5.11.9",
@@ -61,10 +62,10 @@
     "jest": "26.6.3",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-watch-typeahead": "0.6.1",
-    "react-test-renderer": "17.0.1",
     "lint-staged": "10.5.3",
     "prettier": "2.2.1",
     "pretty-quick": "3.1.0",
+    "react-test-renderer": "17.0.1",
     "ts-jest": "26.4.4"
   },
   "private": true
