--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 # This env file should be checked into source control
 # This is the place for default values that should be used in all environments
-DATABASE_URL="file:./db.sqlite"
+# DATABASE_URL="file:./db.sqlite"
+DATABASE_URL=postgresql://matthewwood@localhost:5432/blitz-forum
