--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "0.0.0-experimental-3310209d0",
     "react-dom": "0.0.0-experimental-3310209d0",
     "react-error-boundary": "3.1.0",
+    "react-markdown": "5.0.3",
     "typescript": "4.1.3",
     "zod": "1.11.11"
   },
