--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged && pretty-quick --staged",
+      "pre-commit": "lint-staged",
       "pre-push": "tsc && npm run lint && npm run test"
     }
   },
