--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "4.14.1",
     "@typescript-eslint/parser": "4.14.1",
     "babel-eslint": "10.1.0",
+    "babel-plugin-styled-components": "1.12.0",
     "eslint": "7.18.0",
     "eslint-config-cratebind": "6.0.3",
     "eslint-config-react-app": "6.0.0",
